@@ -1,5 +1,9 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed static allocation in Fl_Tabs (STR #2370)
+	- Fixed Fl_Widget::measure_label() to const (STR #2406)
+	- Added step by step README's for MSWindows, OS X, and four
+	  Linux distros
 	- Fixed unbalanced Windows OleInitialize/OleUnitialize calls
 	  when loading/unloading the FLTK dll (STR #2417)
 	- Fixed X11/XDBE double buffering (STR #2152, #2197)
